--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:8787
+#VITE_API_BASE_URL=http://localhost:8787
 
 # For production, replace with your deployed Cloudflare Workers URL
-# VITE_API_BASE_URL=https://your-worker-name.your-subdomain.workers.dev
+VITE_API_BASE_URL=https://ghebhararisevabhavisanstha.aksharaj878.workers.dev
